name:                tutte-your-stuff
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          wax818@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable tutte-your-stuff
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                       ,containers >= 0.5
                       ,GLUT >= 2.5
                       ,stm >= 2.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O3
